Georgian.Employee.ResponsiveUI/ResponsiveUI/GcResponsive/GC_responsive_ui.css
/*@font-face {
    font-family: "OpenSansRegular";
    src: url('/Style%20Library/SP.REsponsive.UI/fonts/OpenSansRegular.eot');
    src: url('/Style%20Library/SP.REsponsive.UI/fonts/OpenSansRegular.eot') format('embedded-opentype'), url('/Style%20Library/SP.REsponsive.UI/fonts/OpenSansRegular.woff') format('woff'), url('/Style%20Library/SP.REsponsive.UI/fonts/OpenSansRegular.ttf') format('truetype'), url('/Style%20Library/SP.REsponsive.UI/fonts/OpenSansRegular.svg#OpenSansRegular') format('svg');
}

@font-face {
    font-family: "OpenSansBold";
    src: url('/Style%20Library/SP.REsponsive.UI/fonts/OpenSansBold.eot');
    src: url('/Style%20Library/SP.REsponsive.UI/fonts/OpenSansBold.eot') format('embedded-opentype'), url('/Style%20Library/SP.REsponsive.UI/fonts/OpenSansBold.woff') format('woff'), url('/Style%20Library/SP.REsponsive.UI/fonts/OpenSansBold.ttf') format('truetype'), url('/Style%20Library/SP.REsponsive.UI/fonts/OpenSansBold.svg#OpenSansBold') format('svg');
}

@font-face {
    font-family: "OpenSansExtraBold";
    src: url('/Style%20Library/SP.REsponsive.UI/fonts/OpenSansExtraBold.eot');
    src: url('/Style%20Library/SP.REsponsive.UI/fonts/OpenSansExtraBold.eot') format('embedded-opentype'), url('/Style%20Library/SP.REsponsive.UI/fonts/OpenSansExtraBold.woff') format('woff'), url('/Style%20Library/SP.REsponsive.UI/fonts/OpenSansExtraBold.ttf') format('truetype'), url('/Style%20Library/SP.REsponsive.UI/fonts/OpenSansExtraBold.svg#OpenSansExtraBold') format('svg');
}*/
body {
    /*font-family: "OpenSansRegular", "Open Sans", "Roboto", "Lato", "Sans-Serif" !important;*/
    font-size: 14px !important;
}

.mobile-only {
    display: none;
}

.ms-rtePosition-2, .ms-rtePosition-1 {
    width: 100%;
    height: auto;
    display: block;
}

.ms-rtestate-field div{
    padding:0px !important;
}

#s4-workspace, iframe {
    -webkit-overflow-scrolling: touch;
}

/*#sideNavBox, #contentRow, #siteIcon {
    -webkit-transition: all 400ms ease;
    -moz-transition: all 400ms ease;
    -ms-transition: all 400ms ease;
    -o-transition: all 400ms ease;
    transition: all 400ms ease;
}*/

#contentBox {
    min-width: auto;
    /*margin-top: -80px;*/
}

#contentRow {
    /* Start out as collapsed 
    margin-left: -200px;*/
    margin-top: 50px;
}

/* Make sure dialog windows don't break */
.ms-dialog #contentRow {
    margin-left: 0;
}

.ms-dialog #contentBox {
    margin-top: 0;
}

.ms-dialog #s4-bodyContainer {
    min-width: 0;
    font-size: 1em;
}

.ms-breadcrumb-top {
    visibility: visible;
    margin-left: -200px;
}

#DeltaPlaceHolderMain,#pageTitle
{

    margin-top:40px;
}
#sideNavBox {
    /*display:none;*/
}
.ms-breadcrumb-box {
    visibility: visible !important;
}
.ms-rtestate-read
{

    margin-top:50px;

}

.article-content
{
    margin-top:40px;
}






/* Tablet/smartphones common styles for collapsibles */
@media only screen and (max-width : 768px) {
    .mobile-only {
        display: block;
    }

    .no-mobile {
        display: none;
    }

    #contentRow {
        /* Start out as collapsed
    margin-left: -200px; */
    }

    .hamburgMenuIcon {
        color: white !important;
        padding-left: 10px;
        display: block;
        line-height: 30px;
        font-size: large;
        vertical-align: middle;
    }
    #SearchBox {
        margin-top: -70px !important;
        /*top:-70px !important;*/
    }
    #titleAreaBox
    {
        display:table !important;
    }
    .ms-tableCell {
        display:table !important;
    }


    .ms-core-listMenu-horizontalBox > ul.root > li > ul.static > li.static:hover {
        background-color: #333f48;
        width: 300px;
    }

    #gcMobileMenu li.selected{

        width:300px;
    }

    .ms-core-listMenu-horizontalBox > .ms-core-listMenu-root > .static > .wrpDiv {
        border-left:10px solid #333;
    }

        .ms-core-listMenu-horizontalBox > .ms-core-listMenu-root > .static > .wrpDiv:hover {
            background-color: #333f48;
            width: 300px;
        }

    .ms-core-listMenu-verticalBox > ul.root > li.static:hover{
        background-color:#44505b !important;
        width:300px;

    }

    .ms-core-listMenu-verticalBox > ul.root > li.selected {
        background-color: #44505b;
    }

    
    /* to make the sharepoint employee portal menus look the same as student portal*/

    .ms-core-listMenu-root .static ul.static {
        margin-left: -30px;
    }

    
    .ms-core-listMenu-horizontalBox > ul.root > li > ul.static > li.static {
        padding-top: 10px !important;
        padding-bottom: 10px !important;
    }


    #gcMobileMenu .ms-core-listMenu-verticalBox {
        margin-left: 0px !important;
    }


    #gcMobileMenu > div.ms-displayInline > div.ms-core-listMenu-horizontalBox > ul.root > li.selected > div.wrpDiv {
        background-color: #333f48;
        width: 300px;
    }

    #gcMobileMenu > div.ms-displayInline > div.ms-core-listMenu-horizontalBox > ul.root > li > ul > li.selected {
        background-color: #333f48;
        width: 300px;
    }

    /* till here works in employee portal*/

    #DeltaTopNavigation_mobileClone.syncStudent div.ms-core-listMenu-horizontalBox > ul.root > li.selected {
        background-color: #333f48;
        width: 300px;
    }

    #gcMobileMenu .syncStudent .ms-core-listMenu-verticalBox {
        
        border-left:10px solid #333;
    }


}

#navbar-toggle {
    /* hamburger menu (base64 encoded) */
    background: #fff url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAU0lEQVQ4T2NkoBAwUqifgWoGnGRgYDAj0TUgPRYwFxwHcUg04BgDA4M11bxAouUI5TAXUBwGJxgYGMxJdMYgC4MzDAwMxiR6ASUdDIMwINH7COUAalAMEcvSqK4AAAAASUVORK5CYII=) no-repeat center center;
}
/* ... */

